--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "version": "3.1.3",
 
   "background": {
-    "service_worker": "background.js"
+    "scripts": ["background.js"]
   },
    "content_scripts": [ {
       "js": [ "src/content.js" ],
@@ -42,6 +42,7 @@
     "unlimitedStorage",
     "background",
     "activeTab",
+    "scripting",
     "tabCapture",
     "notifications" ]
 }
