--- a/manifest.json
+++ b/manifest.json
@@ -15,11 +15,19 @@
   "background": {
     "scripts": ["background.js"]
   },
-   "content_scripts": [ {
-      "js": [ "src/content.js" ],
+  "content_scripts": [
+    {
+      "js": ["src/hook.js"],
       "matches": ["<all_urls>"],
-	  "all_frames": true
-   } ],
+      "run_at": "document_start",
+      "all_frames": true
+    },
+    {
+      "js": ["src/content.js"],
+      "matches": ["<all_urls>"],
+      "all_frames": true
+    }
+  ],
 
   "action": {
     "default_icon": "img/favicon.png",
