--- a/manifest.json
+++ b/manifest.json
@@ -15,10 +15,11 @@
   "background": {
     "scripts": ["background.js"]
   },
-   "content_scripts": [ {
+  "content_scripts": [ {
       "js": [ "src/content.js" ],
       "matches": ["<all_urls>"],
-	  "all_frames": true
+      "all_frames": true,
+      "run_at": "document_start"
    } ],
 
   "action": {
