--- a/manifest.json
+++ b/manifest.json
@@ -15,11 +15,16 @@
   "background": {
     "scripts": ["background.js"]
   },
-   "content_scripts": [ {
+  "content_scripts": [ {
       "js": [ "src/content.js" ],
       "matches": ["<all_urls>"],
-	  "all_frames": true
+      "all_frames": true,
+      "run_at": "document_start"
    } ],
+  "web_accessible_resources": [{
+      "resources": ["src/hook.js"],
+      "matches": ["<all_urls>"]
+  }],
 
   "action": {
     "default_icon": "img/favicon.png",
